--- a/login.html
+++ b/login.html
@@ -1,1 +1,34 @@
-<a href="index.html">Voltar para a página principal</a>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="login.css">
+</head>
+<body>
+    <main>
+        <div class="container">
+            <h1>Login</h1>
+            <form autocomplete="on" name="login" method="post" id="login" target="_self">
+                <label for="login">Email</label>
+                <input type="email" name="email" id="email" required>
+                <label for="login">Senha</label>
+                <input type="password" name="senha" id="senha" required>
+                <div class="checkbox">
+                <input type="checkbox" name="check" class="check" id="check" form="login">
+                <label for="login" class="check">Mantenha-me conectado(a)</label>
+                </div>
+                <button type="submit" form="login" id="enviar">Enviar</button>
+                <a href="login-funcionario.html"><p class="alt" id="funcionario">Sou funcionário(a)</p></a>
+            </form>
+            <div class="links">
+            <a href="senha.html"><p class="alt">Esqueci minha senha</p></a>
+            <a href="cadastro.html"><p class="alt">Não possuo cadastro</p></a>
+            </div>
+        </div>
+    </main>
+    <script src="login.js"></script>
+</body>
+</html>
