Terminei as telas de login
E as homes das instituições e funcionários

--- a/login-funcionario.html
+++ b/login-funcionario.html
@@ -23,7 +23,7 @@
                 <input type="checkbox" name="check" class="check" id="check" form="login">
                 <label for="login" class="check">Mantenha-me conectado(a)</label>
                 </div>
-                <a href="portal-funcionario"><button type="submit" form="login" id="enviar">Enviar</button></a>
+                <a href="portal-funcionario.html"><button type="submit" form="login" id="enviar">Enviar</button></a>
             </form>
             <div class="links">
             <a href="senha.html"><p class="alt">Esqueci minha senha</p></a>
