--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                 <input type="checkbox" name="check" class="check" id="check" form="login">
                 <label for="login" class="check">Mantenha-me conectado(a)</label>
                 </div>
-                <a href="portal-instituicao"><button type="submit" form="login" id="enviar">Enviar</button></a>
+                <button type="submit" form="login" id="enviar" formaction="portal-instituicao.html">Enviar</button>
                 <a href="login-funcionario.html"><p class="alt" id="funcionario">Sou funcionário(a)</p></a>
             </form>
             <div class="links">
