--- a/login.html
+++ b/login.html
@@ -16,18 +16,18 @@
             <h1>Login</h1>
             <form autocomplete="on" name="login" id="login">
                 <label for="login" class="log">Email</label>
-                <input type="email" name="email" id="email" required placeholder="Insira seu email...">
+                <input type="email" name="email" id="email" required>
                 <label for="login" class="log">Senha</label>
-                <input type="password" name="senha" id="senha" required placeholder="Insira sua senha...">
+                <input type="password" name="senha" id="senha" required>
                 <div class="checkbox">
                 <input type="checkbox" name="check" class="check" id="check" form="login">
                 <label for="login" class="check">Mantenha-me conectado(a)</label>
                 </div>
-                <button type="submit" form="login" id="enviar" formaction="portal-instituicao.html">Enviar</button>
+                <button type="submit" form="login" id="enviar" formaction="menu-instituicao.html">Enviar</button>
                 <a href="login-funcionario.html"><p class="alt" id="funcionario">Sou funcionário(a)</p></a>
             </form>
             <div class="links">
-            <a href="senha.html"><p class="alt">Esqueci minha senha</p></a>
+            <a href="#"><p class="alt">Esqueci minha senha</p></a>
             <a href="cadastro.html"><p class="alt">Não possuo cadastro</p></a>
             </div>
         </div>
