--- a/login-funcionario.html
+++ b/login-funcionario.html
@@ -16,17 +16,17 @@
             <h1>Login</h1>
             <form autocomplete="on" name="login" id="login">
                 <label for="login" class="log">Email</label>
-                <input type="email" name="email" id="email" required placeholder="Insira seu email...">
+                <input type="email" name="email" id="email" required>
                 <label for="login" class="log">Senha</label>
-                <input type="password" name="senha" id="senha" required placeholder="Insira sua senha...">
+                <input type="password" name="senha" id="senha" required>
                 <div class="checkbox">
                 <input type="checkbox" name="check" class="check" id="check" form="login">
                 <label for="login" class="check">Mantenha-me conectado(a)</label>
                 </div>
-                <a href="portal-funcionario.html"><button type="submit" form="login" id="enviar">Enviar</button></a>
+                <button type="submit" form="login" id="enviar" formaction="menu-funcionario.html">Enviar</button>
             </form>
             <div class="links">
-            <a href="senha.html"><p class="alt">Esqueci minha senha</p></a>
+            <a href="#.html"><p class="alt">Esqueci minha senha</p></a>
             </div>
         </div>
     </main>
